--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,65 +15,76 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{ secrets.BE_STRONG }}
 
-{
-	"blocks": [
-		{
-			"type": "header",
-			"text": {
-				"type": "plain_text",
-				"text": "DipSA 56 CI/CD Submission",
-				"emoji": true
-			}
-		},
-		{
-			"type": "section",
-			"fields": [
-				{
-					"type": "mrkdwn",
-					"text": "*Name: * Chit Su Wai Lin"
-				},
-				{
-					"type": "mrkdwn",
-					"text": "*Email: * e1114086@u.nus.edu"
-				}
-			]
-		},
-		{
-			"type": "section",
-			"fields": [
-				{
-					"type": "mrkdwn",
-					"text": "*Matriculation:* Axxxxx"
-				},
-				{
-					"type": "mrkdwn",
-					"text": "*Repository:*\nhttps://github.com/ChitSuWL/ADLC3_workshop"
-				}
-			]
-		},
-		{
-			"type": "section",
-			"text": {
-				"type": "mrkdwn",
-				"text": "<https://laughable-collar-production.up.railway.app>"
-			}
-		},
-		{
-			"type": "section",
-			"text": {
-				"type": "mrkdwn",
-				"text": " "
-			},
-			"accessory": {
-				"type": "button",
-				"text": {
-					"type": "plain_text",
-					"text": "Go",
-					"emoji": true
-				},
-				"url": "https://laughable-collar-production.up.railway.app", 
-        		"action_id": "button-action"
-			}
-		}
-	]
-}
+  send_submission:
+    needs: CICD_Workshop
+    runs-on: ubuntu-latest
+    steps:
+      - name: Submit via Slack
+        uses: slackapi/slack-github-action@v3.5.1
+        with:
+          status_text: "New submission available"
+          fields: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "DipSA 56 CI/CD Submission",
+                    "emoji": true
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Name: * Chit Su Wai Lin"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Email: * e1114086@u.nus.edu"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Matriculation:* Axxxxx"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Repository:*\nhttps://github.com/ChitSuWL/ADLC3_workshop"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "<https://laughable-collar-production.up.railway.app>"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": " "
+                  },
+                  "accessory": {
+                    "type": "button",
+                    "text": {
+                      "type": "plain_text",
+                      "text": "Go",
+                      "emoji": true
+                    },
+                    "url": "https://laughable-collar-production.up.railway.app",
+                    "action_id": "button-action"
+                  }
+                }
+              ]
+            }
+          channel_id: "https://app.slack.com/client/T0557SC1562/C0557SC27E2"
+          github_token: ${{ secrets.BE_STRONG}}
