--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,8 @@ jobs:
   CICD_Workshop:
     runs-on: ubuntu-latest
     steps:
-      - name: ADLC3_workshop@vl
-        uses: ChitSuWL/ADLC3_workshop@v1
+      - name: ADLC3_workshop
+        uses: ChitSuWL/ADLC3_workshop@v1.0
       - name: Deploy
         run: railway up
         env:
