--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,7 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v3
 
+jobs:
   Deploy to Railway:
     runs-on: ubuntu-latest
     steps:
@@ -19,6 +20,7 @@ jobs:
       env:
         RAILWAY_TOKEN: ${{ secrets.BE_STRONG }}
 
+jobs:
   send_notification:
     runs-on: ubuntu-latest
     steps:
