--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Railway CLI
-      uses: MadeByThePinsHub/setup-railway-cli-action@v0.1.0
+      run: mpm i -g @Railway/CLI
     - name: Deploy
       run: railway up
       env:
