--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup Railway CLI
-      run: npm i -g @Railway/CLI
+      run: npm i -g @railway/cli
     - name: Deploy
       run: railway up
       env:
