--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,6 @@ jobs:
       uses: slackapi/slack-github-action@v1.23.0
       with:
         payload: |
-          payload: |
           {
             "blocks": [
               {
@@ -88,4 +87,5 @@ jobs:
           }
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_WEBHOOK_TYPE : INCOMING_WEBHOOK
         
