--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,5 +87,5 @@ jobs:
             ]
           }
       env:
-        SLACK_WEBHOOK: ${{secrets.SLACK_WEBHOOK}}
+        SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}}
         
