--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -88,4 +88,4 @@ jobs:
           }
       env:
         SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}}
-        
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
