--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -80,7 +80,8 @@ jobs:
                     "text": "Go",
                     "emoji": true
                   },
-                  "url": "https://laughable-collar-production.up.railway.app",
+                  "value": "click_me_123",
+                  "url": "https://app.slack.com/client/T054JE2KFTM/C05552HCNRY",
                   "action_id": "button-action"
                 }
               }
