--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,7 +77,7 @@ jobs:
                   "type": "button",
                   "text": {
                     "type": "plain_text",
-                    "text": "Go",
+                    "text": "GO",
                     "emoji": true
                   },
                   "value": "click_me_123",
